--- a/classes/CRCart.html
+++ b/classes/CRCart.html
@@ -231,7 +231,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__AppliedRuleActionInfos__r&#x27;})<br />@Type(undefined)<br />
+                                @AField({soql: &#x27;Apttus_Config2__AppliedRuleActionInfos__r&#x27;, aql: &#x27;ConfigurationId&#x27;})<br />@Type(undefined)<br />
                             </code>
                         </td>
                     </tr>
@@ -274,7 +274,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__Applied_Rule_Infos__r&#x27;})<br />@Type(undefined)<br />
+                                @AField({soql: &#x27;Apttus_Config2__Applied_Rule_Infos__r&#x27;, aql: &#x27;ConfigurationId&#x27;})<br />@Type(undefined)<br />
                             </code>
                         </td>
                     </tr>
