--- a/classes/CartItem.html
+++ b/classes/CartItem.html
@@ -251,7 +251,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__AddedByRuleInfo__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__AddedByRuleInfo__c&#x27;, aql: &#x27;AddedByRuleInfo&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -595,7 +595,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__EndDate__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__EndDate__c&#x27;, aql: &#x27;EndDate&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -1154,7 +1154,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ParentBundleNumber__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ParentBundleNumber__c&#x27;, aql: &#x27;ParentBundleNumber&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -1361,7 +1361,7 @@
                     </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Default value : </i><code>&#x27;Pending&#x27;</code>
+                            <i>Default value : </i><code>null</code>
                         </td>
                     </tr>
                     <tr>
@@ -1412,7 +1412,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__Term__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__Term__c&#x27;, aql: &#x27;Term&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -1756,7 +1756,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__SellingTerm__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__SellingTerm__c&#x27;, aql: &#x27;SellingTerm&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -1799,7 +1799,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__StartDate__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__StartDate__c&#x27;, aql: &#x27;StartDate&#x27;})<br />
                             </code>
                         </td>
                     </tr>
