--- a/classes/PriceListItem.html
+++ b/classes/PriceListItem.html
@@ -317,7 +317,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__DefaultSellingTerm__c&#x27;, aql: &#x27;&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__DefaultSellingTerm__c&#x27;, aql: &#x27;DefaultSellingTerm&#x27;})<br />
                             </code>
                         </td>
                     </tr>
