--- a/classes/ProductOptionComponent.html
+++ b/classes/ProductOptionComponent.html
@@ -206,7 +206,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__AllowCloning__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__AllowCloning__c&#x27;, aql: &#x27;AllowCloning&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -249,7 +249,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__AutoUpdateQuantity__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__AutoUpdateQuantity__c&#x27;, aql: &#x27;AutoUpdateQuantity&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -292,7 +292,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ComponentProductId__r&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ComponentProductId__r&#x27;, aql: &#x27;ComponentProductId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -335,7 +335,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ComponentProductId__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ComponentProductId__c&#x27;, aql: &#x27;ComponentProductId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -378,7 +378,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ConfigType__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ConfigType__c&#x27;, aql: &#x27;ConfigType&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -421,7 +421,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__Default__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__Default__c&#x27;, aql: &#x27;IsDefault&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -464,7 +464,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__DefaultQuantity__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__DefaultQuantity__c&#x27;, aql: &#x27;DefaultQuantity&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -507,7 +507,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__DefaultQuantityExpressionId__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__DefaultQuantityExpressionId__c&#x27;, aql: &#x27;DefaultQuantityExpressionId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -550,7 +550,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__InclusionCriteria__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__InclusionCriteria__c&#x27;, aql: &#x27;InclusionCriteria&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -593,7 +593,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__MaxQuantity__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__MaxQuantity__c&#x27;, aql: &#x27;MaxQuantity&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -636,7 +636,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__MaxQuantityExpressionId__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__MaxQuantityExpressionId__c&#x27;, aql: &#x27;MaxQuantityExpressionId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -679,7 +679,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__MinQuantity__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__MinQuantity__c&#x27;, aql: &#x27;MinQuantity&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -722,7 +722,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__MinQuantityExpressionId__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__MinQuantityExpressionId__c&#x27;, aql: &#x27;MinQuantityExpressionId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -765,7 +765,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__Modifiable__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__Modifiable__c&#x27;, aql: &#x27;Modifiable&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -808,7 +808,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Name&#x27;})<br />
+                                @AField({soql: &#x27;Name&#x27;, aql: &#x27;Name&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -894,7 +894,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ParentProductId__r&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ParentProductId__r&#x27;, aql: &#x27;ParentProductId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -937,7 +937,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ParentProductId__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ParentProductId__c&#x27;, aql: &#x27;ParentProductId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -980,7 +980,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ProductOptionGroupId__r&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ProductOptionGroupId__r&#x27;, aql: &#x27;ProductOptionGroupId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -1023,7 +1023,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ProductOptionGroupId__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ProductOptionGroupId__c&#x27;, aql: &#x27;ProductOptionGroupId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -1066,7 +1066,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__RelationshipType__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__RelationshipType__c&#x27;, aql: &#x27;RelationshipType&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -1109,7 +1109,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__Required__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__Required__c&#x27;, aql: &#x27;Required&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -1152,7 +1152,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__Sequence__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__Sequence__c&#x27;, aql: &#x27;Sequence&#x27;})<br />
                             </code>
                         </td>
                     </tr>
