--- a/modules/CatalogModule.html
+++ b/modules/CatalogModule.html
@@ -79,6 +79,36 @@
                     </ul>
                 </div>
                 <div class="col-sm-3">
+                    <h3>Providers<a href="https://angular.io/api/core/NgModule#providers" target="_blank"
+                            title="Official documentation about module providers"><span class="icon ion-ios-information-circle-outline"></a></h3>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a href="../injectables/CategoryService.html">CategoryService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/ProductAttributeRuleService.html">ProductAttributeRuleService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/ProductAttributeService.html">ProductAttributeService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/ProductInformationService.html">ProductInformationService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/ProductOptionGroupService.html">ProductOptionGroupService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/ProductOptionService.html">ProductOptionService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/ProductService.html">ProductService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/SearchService.html">SearchService</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
                     <h3>Imports<a href="https://angular.io/api/core/NgModule#imports" target="_blank" title="Official documentation about module imports"><span
                                 class="icon ion-ios-information-circle-outline"></a></h3>
                     <ul class="list-group">
