--- a/modules/PricingModule.html
+++ b/modules/PricingModule.html
@@ -101,6 +101,18 @@
                             title="Official documentation about module providers"><span class="icon ion-ios-information-circle-outline"></a></h3>
                     <ul class="list-group">
                         <li class="list-group-item">
+                            <a href="../injectables/PriceListItemService.html">PriceListItemService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/PriceListService.html">PriceListService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/PriceMatrixService.html">PriceMatrixService</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../injectables/PriceRuleService.html">PriceRuleService</a>
+                        </li>
+                        <li class="list-group-item">
                             <a href="../injectables/PriceService.html">PriceService</a>
                         </li>
                     </ul>
