--- a/classes/ConstraintRuleAction.html
+++ b/classes/ConstraintRuleAction.html
@@ -138,6 +138,9 @@
                                 <a href="#ProductFamily">ProductFamily</a>
                             </li>
                             <li>
+                                <a href="#ProductGroup">ProductGroup</a>
+                            </li>
+                            <li>
                                 <a href="#ProductGroupId">ProductGroupId</a>
                             </li>
                             <li>
@@ -206,7 +209,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ActionDisposition__c&#x27;, aql: &#x27;&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ActionDisposition__c&#x27;, aql: &#x27;ActionDisposition&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -949,6 +952,49 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
+                        <a name="ProductGroup"></a>
+                        <span class="name">
+                            <b>
+                            ProductGroup
+                            </b>
+                            <a href="#ProductGroup"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <code>ProductGroup:     <code><a href="../classes/ProductGroup.html" target="_self" >ProductGroup</a></code>
+</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>    <code><a href="../classes/ProductGroup.html" target="_self" >ProductGroup</a></code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>new ProductGroup()</code>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <b>Decorators : </b>
+                            <br />
+                            <code>
+                                @AField({soql: &#x27;Apttus_Config2__ProductGroupId__r&#x27;, aql: &#x27;ProductGroupId&#x27;})<br />
+                            </code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
                         <a name="ProductGroupId"></a>
                         <span class="name">
                             <b>
@@ -1023,7 +1069,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__ProductId__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__ProductId__c&#x27;, aql: &#x27;ProductId&#x27;})<br />
                             </code>
                         </td>
                     </tr>
