--- a/classes/ProductAttributeValue.html
+++ b/classes/ProductAttributeValue.html
@@ -238,7 +238,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @AField({soql: &#x27;Apttus_Config2__IsTransient__c&#x27;})<br />
+                                @AField({soql: &#x27;Apttus_Config2__IsTransient__c&#x27;, aql: &#x27;IsTransient&#x27;})<br />
                             </code>
                         </td>
                     </tr>
