--- a/classes/ProductInformationServiceSFDC.html
+++ b/classes/ProductInformationServiceSFDC.html
@@ -28,71 +28,62 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content module">
+               <div class="content class">
                    <div class="content-data">
 
 
 
+
+
+
+
+
+
+
+
 <ol class="breadcrumb">
-    <li>Modules</li>
-    <li>CrmModule</li>
+  <li>Classes</li>
+  <li>ProductInformationServiceSFDC</li>
 </ol>
 
-
 <ul class="nav nav-tabs" role="tablist">
-    <li  class="active" >
-        <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">Info</a>
-    </li>
+        <li class="active">
+            <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">Info</a>
+        </li>
 </ul>
 
 <div class="tab-content">
     <div class="tab-pane fade active in" id="c-info">
-
         <p class="comment">
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>projects/apttus/ecommerce/src/lib/modules/crm/crm.module.ts</code>
+            <code>projects/apttus/ecommerce/src/lib/modules/catalog/services/product-information/product-information.sfdc.service.ts</code>
         </p>
 
 
+            <p class="comment">
+                <h3>Extends</h3>
+            </p>
+            <p class="comment">
+                    <code><a href="../injectables/ProductInformationService.html" target="_self" >ProductInformationServiceCore</a></code>
+            </p>
 
 
-        <div class="container-fluid module">
-            <div class="row">
-                <div class="col-sm-3">
-                    <h3>Providers<a href="https://angular.io/api/core/NgModule#providers" target="_blank"
-                            title="Official documentation about module providers"><span class="icon ion-ios-information-circle-outline"></a></h3>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <a href="../injectables/AccountLocationService.html">AccountLocationService</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="../injectables/AccountService.html">AccountService</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="../injectables/ContactService.html">ContactService</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="../injectables/UserService.html">UserService</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+
+
+
+
+
+
+
+
 
 
     </div>
 
 
 </div>
-
-
-
-
-
-
-
 
 
 
@@ -116,8 +107,8 @@
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'module';
-            var COMPODOC_CURRENT_PAGE_URL = 'CrmModule.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'class';
+            var COMPODOC_CURRENT_PAGE_URL = 'ProductInformationServiceSFDC.html';
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
