--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -67,6 +67,9 @@
                             <a href="#catalogComponents" title="projects/apttus/ecommerce/src/lib/modules/catalog/catalog.module.ts"><b>catalogComponents</b>&nbsp;&nbsp;&nbsp;(projects/.../catalog.module.ts)</a>
                         </li>
                         <li>
+                            <a href="#components" title="projects/apttus/constraint-rules/src/lib/constraint-rules.module.ts"><b>components</b>&nbsp;&nbsp;&nbsp;(projects/.../constraint-rules.module.ts)</a>
+                        </li>
+                        <li>
                             <a href="#context" title="projects/apttus/ecommerce/src/test.ts"><b>context</b>&nbsp;&nbsp;&nbsp;(projects/.../test.ts)</a>
                         </li>
                         <li>
@@ -204,6 +207,43 @@
                     <tr>
                         <td class="col-md-4">
                             <i>Default value : </i><code>[ProductCardComponent, ProductCarouselComponent, BreadcrumbComponent, ProductImagesComponent]</code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+</section>
+    <h3>projects/apttus/constraint-rules/src/lib/constraint-rules.module.ts</h3>
+    <section>
+    <h3></h3>        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="components"></a>
+                        <span class="name">
+                            <b>
+                            components
+                            </b>
+                            <a href="#components"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <code>components:     <code>[]</code>
+</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>    <code>[]</code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>[CRPopoverComponent, CRModalComponent, CRRecommendedProductsComponent, CRProductCardComponent, CRAddToCartComponent, CRProductCarouselComponent, CRConstraintAlertComponent, CRSideMenuComponent, CRIconComponent]</code>
                         </td>
                     </tr>
 
