--- a/modules/ConstraintRulesModule.html
+++ b/modules/ConstraintRulesModule.html
@@ -125,10 +125,16 @@
                             <a href="../components/CRModalComponent.html">CRModalComponent</a>
                         </li>
                         <li class="list-group-item">
+                            <a href="../components/CRPopoverComponent.html">CRPopoverComponent</a>
+                        </li>
+                        <li class="list-group-item">
                             <a href="../components/CRProductCardComponent.html">CRProductCardComponent</a>
                         </li>
                         <li class="list-group-item">
                             <a href="../components/CRProductCarouselComponent.html">CRProductCarouselComponent</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="../components/CRRecommendedProductsComponent.html">CRRecommendedProductsComponent</a>
                         </li>
                         <li class="list-group-item">
                             <a href="../components/CRSideMenuComponent.html">CRSideMenuComponent</a>
