--- a/injectables/PriceListItemService.html
+++ b/injectables/PriceListItemService.html
@@ -135,7 +135,7 @@
                 <tr>
                     <td class="col-md-4">
                             <span class="modifier-icon icon ion-ios-reset"></span>
-                        <code>getPriceListItemByCode(productCodeList: Array<string>)</code>
+                        <code>getPriceListItemByCode(productCode: Array<string>)</code>
                     </td>
                 </tr>
 
@@ -155,11 +155,12 @@
                                                 <td>Name</td>
                                                     <td>Type</td>
                                                 <td>Optional</td>
+                                                    <td>Description</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                        <td>productCodeList</td>
+                                                        <td>productCode</td>
                                                         <td>
                                                                     <code>Array&lt;string&gt;</code>
                                                         </td>
@@ -169,6 +170,10 @@
                                                     </td>
                                                     
 
+                                                        <td>
+                                                                <code><p>the code of the product to return the price list item for.</p>
+</code>
+                                                        </td>
                                                 </tr>
                                         </tbody>
                                     </table>
