--- a/injectables/ConstraintRuleService.html
+++ b/injectables/ConstraintRuleService.html
@@ -54,7 +54,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>projects/apttus/constraint-rules/src/lib/services/constraint-rule/constraint-rule.service.ts</code>
+            <code>projects/apttus/constraint-rules/src/lib/services/constraint-rule.service.ts</code>
         </p>
 
             <p class="comment">
@@ -71,6 +71,28 @@ The Constraint Rule Service has methods that both apply constraint rules and ret
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Properties</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                    <span class="modifier">Public</span>
+                                <a href="#sideMenuState">sideMenuState</a>
+                            </li>
+                            <li>
+                                    <span class="modifier">Public</span>
+                                <a href="#toggleSideMenu">toggleSideMenu</a>
+                            </li>
+                            <li>
+                                <a href="#type">type</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
                 <tr>
                     <td class="col-md-4">
@@ -122,6 +144,9 @@ The Constraint Rule Service has methods that both apply constraint rules and ret
                             <li>
                                     <span class="modifier">Public</span>
                                 <a href="#hasPendingErrors">hasPendingErrors</a>
+                            </li>
+                            <li>
+                                <a href="#onInit">onInit</a>
                             </li>
                             <li>
                                     <span class="modifier">Public</span>
@@ -962,6 +987,39 @@ and the expiration date that are active.</p>
             <tbody>
                 <tr>
                     <td class="col-md-4">
+                        <a name="onInit"></a>
+                        <span class="name">
+                            <b>
+                            onInit
+                            </b>
+                            <a href="#onInit"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+<code>onInit()</code>
+                    </td>
+                </tr>
+
+
+
+
+                <tr>
+                    <td class="col-md-4">
+
+                            <div class="io-description">
+                                <b>Returns : </b>    <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+
+                            </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
                         <a name="openSideMenu"></a>
                         <span class="name">
                             <b>
@@ -1086,6 +1144,110 @@ and the expiration date that are active.</p>
         </table>
 </section>
 
+            <section>
+    
+        <h3 id="inputs">
+            Properties
+        </h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="sideMenuState"></a>
+                        <span class="name">
+                            <b>
+                                <span class="modifier">Public</span>
+                            sideMenuState
+                            </b>
+                            <a href="#sideMenuState"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <span class="modifier-icon icon ion-ios-reset"></span><code>sideMenuState:     <code>&quot;open&quot; | &quot;closed&quot;</code>
+</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>    <code>&quot;open&quot; | &quot;closed&quot;</code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>&#x27;closed&#x27;</code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="toggleSideMenu"></a>
+                        <span class="name">
+                            <b>
+                                <span class="modifier">Public</span>
+                            toggleSideMenu
+                            </b>
+                            <a href="#toggleSideMenu"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <span class="modifier-icon icon ion-ios-reset"></span><code>toggleSideMenu:     <code>EventEmitter&lt;&quot;open&quot; | &quot;closed&quot;&gt;</code>
+</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>    <code>EventEmitter&lt;&quot;open&quot; | &quot;closed&quot;&gt;</code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>new EventEmitter&lt;&#x27;open&#x27; | &#x27;closed&#x27;&gt;()</code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="type"></a>
+                        <span class="name">
+                            <b>
+                            type
+                            </b>
+                            <a href="#type"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <code>type:     <code></code>
+</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>ConstraintRule</code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+</section>
 
     </div>
 
